--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
         <div class="life">
             <h4>
-                <p><img class="icon" src="assets/images/discription.svg" alt="discription">Description</p>
-                <p><img class="icon" src="assets/images/health.svg" alt="health">Health Problems</p>
-                <p><img class="icon" src="assets/images/nutrition.svg" alt="nutrition">Health Problems</p>
+                <p><img class="icon" src="assets/images/discription.svg" alt="discription">
+                    <a href="https://en.wikipedia.org/wiki/Pug">Description</p></a>
+                <p><img class="icon" src="assets/images/health.svg" alt="health">
+                    <a href="https://en.wikipedia.org/wiki/Pug">Health Problems</p></a>
+                <p><img class="icon" src="assets/images/nutrition.svg" alt="nutrition">
+                    <a href="https://en.wikipedia.org/wiki/Pug">Health Problems</p></a>
             </h4>
         </div>    
 
